--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,5 @@
     <string name="email">Email</string>
     <string name="password">Password</string>
     <string name="preference_file_key">current_user</string>
+    <string name="payment_title">Payment</string>
 </resources>
